--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@mauron85/cordova-plugin-background-geolocation",
+  "name": "cordova-plugin-mauron85-background-geolocation-fork",
   "version": "3.0.3",
-  "description": "Cordova Background Geolocation Plugin",
+  "description": "Cordova Background Geolocation Plugin (Forked by glebpl)",
   "main": "./www/BackgroundGeolocation.js",
   "types": "./www/BackgroundGeolocation.d.ts",
   "cordova": {
-    "id": "cordova-plugin-mauron85-background-geolocation",
+    "id": "cordova-plugin-mauron85-background-geolocation-fork",
     "platforms": [
       "android",
       "ios"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mauron85/cordova-plugin-background-geolocation.git"
+    "url": "git+https://github.com/glebpl/cordova-plugin-background-geolocation"
   },
   "keywords": [
     "gps",
