--- a/android/common/src/main/AndroidManifest.xml
+++ b/android/common/src/main/AndroidManifest.xml
@@ -52,7 +52,6 @@
         </receiver>
     </application>
 
-    <uses-sdk android:minSdkVersion="14" />
     <uses-permission android:name="android.hardware.location" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -65,4 +64,5 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
